--- a/airs/content/pages/products/rules/list/services/330/index.adoc
+++ b/airs/content/pages/products/rules/list/services/330/index.adoc
@@ -30,23 +30,31 @@ An adversary modifies content to make it contain something other than what the
 original content producer intended while keeping the apparent source of the
 content unchanged.
 
-. [[r2]] link:https://cwe.mitre.org/data/definitions/353.html[CWE-353: Missing Support for Integrity Check]
+. [[r2]] link:http://capec.mitre.org/data/definitions/154.html[CAPEC-154: Resource Location Spoofing].
+An adversary deceives an application or user and convinces them to request a
+resource from an unintended location.
+By spoofing the location, the adversary can cause an alternate resource to be
+used,
+often one that the adversary controls and can be used to help them achieve
+their malicious goals.
+
+. [[r3]] link:https://cwe.mitre.org/data/definitions/353.html[CWE-353: Missing Support for Integrity Check]
 The software uses a transmission protocol that does not include a mechanism for
 verifying the integrity of the data during transmission, such as a checksum.
 
-. [[r3]] link:https://cwe.mitre.org/data/definitions/494.html[CWE-494: Download of Code Without Integrity Check]
+. [[r4]] link:https://cwe.mitre.org/data/definitions/494.html[CWE-494: Download of Code Without Integrity Check]
 The product downloads source code or an executable from a remote location and
 executes the code without sufficiently verifying the origin and integrity of
 the code.
 
-. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V10.3 Deployed Application Integrity Controls.(10.3.1)]
 Verify that if the application has a client or server auto-update feature,
 updates should be obtained over secure channels and digitally signed.
 The update code must validate the digital signature of the update before
 installing or executing the update.
 
-. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V10.3 Deployed Application Integrity Controls.(10.3.2)]
 Verify that the application employs integrity protections,
 such as code signing or **sub-resource integrity**.
@@ -54,7 +62,7 @@ The application must not load or execute code from untrusted sources,
 such as loading includes, modules, plugins, code, or libraries from untrusted
 sources or the Internet.
 
-. [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r7]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V14.2 Dependency.(14.2.3)]
 Verify that if application assets, such as *JavaScript* libraries, *CSS*
 stylesheets or web fonts, are hosted externally on a content delivery
