airs\refac(doc): #3177.5 native eng improvement
- New changes suggested by Santaularia were applied.


Former-commit-id: 342790f407e315f5afcc372734a29636491f4554

--- a/airs/content/pages/about-us/events/securing-device/index.adoc
+++ b/airs/content/pages/about-us/events/securing-device/index.adoc
@@ -5,7 +5,7 @@
 :eventspage: yes
 :banner: events-bg
 
-= Securing your Mobile Device
+= Securing Your Mobile Device
 
 == 1. Objective
 
@@ -54,5 +54,4 @@ The maximum number of participants is `30`.
 
 == 8. Speaker
 
-Licensed in Education, with `15` years of experience.
-`Fluid Attacks` Co-founder. Information Security Systems Auditor.
+David Cardona
