--- a/airs/content/pages/products/rules/list/credentials/132/index.adoc
+++ b/airs/content/pages/products/rules/list/credentials/132/index.adoc
@@ -14,9 +14,9 @@ and allow them to have 64 characters or more.
 == Description
 
 Passwords are identity assertion elements that can be easily forgotten.
-Passphrases are sequences of words that are longer than passwords but are also
-easier to remember.
-Thus, systems should enforce the usage of passphrases at least 4 words long
+Passphrases are sequences of words that are longer than passwords
+but are also easier to remember.
+Thus, systems should enforce the use of passphrases at least 4 words long
 and allow them to have 64 characters or more.
 
 == Findings
