--- a/airs/content/pages/products/rules/list/credentials/136/index.adoc
+++ b/airs/content/pages/products/rules/list/credentials/136/index.adoc
@@ -4,7 +4,7 @@
 :keywords: Force, Temporary Passwords, Change, ASVS, CWE, NIST, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
-= R136. Force temporary password changing
+= R136. Force temporary password change
 
 == Requirement
 
