--- a/airs/content/pages/products/rules/list/credentials/140/index.adoc
+++ b/airs/content/pages/products/rules/list/credentials/140/index.adoc
@@ -8,7 +8,7 @@
 
 == Requirement
 
-One time passwords (*OTP*) must have a maximum lifespan of *60* seconds.
+One-time passwords (*OTP*) must have a maximum lifespan of *60* seconds.
 
 == Description
 
