--- a/airs/content/pages/products/rules/list/credentials/332/index.adoc
+++ b/airs/content/pages/products/rules/list/credentials/332/index.adoc
@@ -13,8 +13,8 @@ against a list of 1000 to 10000 breached passwords.
 
 == Description
 
-There exist various mechanisms for cracking passwords that use public lists
-containing breached credentials.
+There are various mechanisms for cracking passwords
+that use public lists containing breached credentials.
 Systems must check submitted passwords against some of these lists and prevent
 account creation and password update operations that use passwords contained in
 them.
