--- a/airs/content/pages/products/rules/list/credentials/347/index.adoc
+++ b/airs/content/pages/products/rules/list/credentials/347/index.adoc
@@ -16,8 +16,8 @@ of a new one is triggered.
 One-time passwords (*OTP*) are secrets used during operations that need added
 security or as part of user enrollment processes.
 Despite their short lifespan, only one *OTP* should be valid at any given time,
-therefore, all previous **OTP**s should be invalidated whenever a new one is
-generated.
+and therefore, all previous **OTP**s should be invalidated
+whenever a new one is generated.
 
 == References
 
