--- a/airs/content/pages/products/rules/list/credentials/126/index.adoc
+++ b/airs/content/pages/products/rules/list/credentials/126/index.adoc
@@ -13,15 +13,15 @@ to regenerate a user's password.
 
 == Description
 
-Passwords are identity assertion elements that can be easily lost or forgotten.
-Systems should have a secure mechanism that allows users to generate a new
-password when they have lost their previous one.
-Alternatively, passwords can be leaked as a result of a user's actions or a
-breach in the system.
-Thus, there should also exist a secure mechanism that allows users to change
-their passwords when they require it.
-Furthermore, none of these mechanisms should send a recovery secret in plain
-text nor should they reveal the current password.
+Passwords are identity assertion elements
+that can be easily lost or forgotten.
+Additionally, they can be leaked as a result of a user's actions
+or a breach in the system.
+Thus, systems should have a secure mechanism
+that allows users to generate a new password in either of these scenarios.
+Furthermore, none of these mechanisms
+should send a recovery secret in plain text
+nor should they reveal the current password.
 
 == References
 
