--- a/airs/content/pages/products/rules/list/credentials/142/index.adoc
+++ b/airs/content/pages/products/rules/list/credentials/142/index.adoc
@@ -13,13 +13,12 @@ all default access credentials of embedded systems.
 
 == Description
 
-Organizations usually keep default configurations
-of third-party products
+Organizations usually keep default configurations of third-party products,
 since these may adapt to most environments where they are installed
 and facilitate the deployment to production.
 However, this practice may leave a default open gate for products
-and, in most cases, credentials found in provider documentation,
-which can be found easily on the Internet.
+and, in most cases, credentials within provider documentation,
+which can be easily found on the Internet.
 For this reason it is important to check all configurations
 before deployment and remove all default credentials.
 
