--- a/airs/content/pages/products/rules/list/architecture/324/index.adoc
+++ b/airs/content/pages/products/rules/list/architecture/324/index.adoc
@@ -1,7 +1,7 @@
 :slug: products/rules/list/324/
 :category: architecture
 :description: This requirement establishes the importance of controlling redirects as they may lead to malicious sites.
-:keywords: Control, Redirect, External, Site, ASVS, CWE, ISO, Rules, Ethical Hacking, Pentesting
+:keywords: Control, Redirect, External, Site, ASVS, CAPEC, CWE, ISO, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R324. Control redirects
@@ -29,66 +29,71 @@ redirected to trusted sites.
 
 == References
 
-. [[r1]] link:https://cwe.mitre.org/data/definitions/601.html[CWE-601: URL Redirection to Untrusted Site ('Open Redirect')].
+. [[r1]] link:http://capec.mitre.org/data/definitions/161.html[CAPEC-161: Infrastructure Manipulation].
+An attacker exploits characteristics of the infrastructure of a network entity
+in order to perpetrate attacks or information gathering on network objects or
+effect a change in the ordinary information flow between network objects.
+
+. [[r2]] link:https://cwe.mitre.org/data/definitions/601.html[CWE-601: URL Redirection to Untrusted Site ('Open Redirect')].
 A web application accepts a user-controlled input that specifies a link to an
 external site,
 and uses that link in a Redirect.
 This simplifies *phishing* attacks.
 
-. [[r2]] link:https://cwe.mitre.org/data/definitions/602.html[CWE-602: Client-Side Enforcement of Server-Side Security].
+. [[r3]] link:https://cwe.mitre.org/data/definitions/602.html[CWE-602: Client-Side Enforcement of Server-Side Security].
 The software is composed of a server that relies on the client to implement a
 mechanism that is intended to protect the server.
 
-. [[r3]] link:https://cwe.mitre.org/data/definitions/918.html[CWE-918: Server-Side Request Forgery (SSRF)].
+. [[r4]] link:https://cwe.mitre.org/data/definitions/918.html[CWE-918: Server-Side Request Forgery (SSRF)].
 The web server receives a URL or similar request from an upstream component
 and retrieves the contents of this URL,
 but it does not sufficiently ensure that the request is being sent to the
 expected destination.
 
-. [[r4]] link:https://cwe.mitre.org/data/definitions/1022.html[CWE-1022: Use of Web Link to Untrusted Target with window.opener Access].
+. [[r5]] link:https://cwe.mitre.org/data/definitions/1022.html[CWE-1022: Use of Web Link to Untrusted Target with window.opener Access].
 The software does not restrict or incorrectly restricts access to a resource
 from an unauthorized actor.
 
-. [[r5]] link:https://www.iso.org/obp/ui/#iso:std:54534:en[ISO 27001:2013. Annex A - 14.1.3]
+. [[r6]] link:https://www.iso.org/obp/ui/#iso:std:54534:en[ISO 27001:2013. Annex A - 14.1.3]
 Protect information included in application services transactions to avoid
 partial transmission, improper routing, unauthorized message modifications,
 unauthorized disclosure and unauthorized message duplication or replay.
 
-. [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r7]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V1.4 Access Control Architectural Requirements.(1.4.1)]
 Verify that trusted enforcement points such as at access control gateways,
 servers, and serverless functions enforce access controls.
 Never enforce access controls on the client.
 
-. [[r7]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r8]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V1.5 Input and Output Architectural Requirements.(1.5.3)]
 Verify that input validation is enforced on a trusted service layer.
 
-. [[r8]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r9]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V4.1 General Access Control Design.(4.1.1)]
 Verify that the application enforces access control rules on a trusted service
 layer,
 especially if client-side access control is present and could be bypassed.
 
-. [[r9]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r10]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V5.1 Input Validation Requirements.(5.1.5)]
 Verify that URL redirects and forwards only allow whitelisted destinations,
 or show a warning when redirecting to potentially untrusted content.
 
-. [[r10]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r11]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V5.2 Sanitization and Sandboxing Requirements.(5.2.6)]
 Verify that the application protects against *SSRF* attacks,
 by validating or sanitizing untrusted data or *HTTP* file metadata,
 such as filenames and URL input fields,
 or using whitelisting of protocols, domains, paths and ports.
 
-. [[r11]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r12]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V12.6 SSRF Protection Requirements.(12.6.1)]
 Verify that the web or application server is configured with a whitelist of
 resources or systems to which the server can send requests or load data/files
 from.
 
-. [[r12]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r13]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V14.4 HTTP Security Headers Requirements.(14.4.6)]
 Verify that a suitable "**Referrer-Policy**" header is included,
 such as "**no-referrer**" or "**same-origin**".
