--- a/airs/content/pages/products/rules/list/files/040/index.adoc
+++ b/airs/content/pages/products/rules/list/files/040/index.adoc
@@ -24,18 +24,22 @@ Because different file types are handled by different server processes,
 misclassification may force the Web server to take unexpected action,
 or expected actions in an unexpected sequence.
 
-. [[r2]] link:https://cwe.mitre.org/data/definitions/434.html[CWE-434: Unrestricted Upload of File with Dangerous Type].
+. [[r2]] link:http://capec.mitre.org/data/definitions/165.html[CAPEC-165: File Manipulation].
+An attacker modifies file contents or attributes (such as extensions or names)
+of files in a manner to cause incorrect processing by an application.
+
+. [[r3]] link:https://cwe.mitre.org/data/definitions/434.html[CWE-434: Unrestricted Upload of File with Dangerous Type].
 The software allows the attacker to upload or transfer files of dangerous types
 that can be automatically processed within the product's environment.
 
-. [[r3]] link:https://cwe.mitre.org/data/definitions/646.html[CWE-646: Reliance on File Name or Extension of Externally-Supplied File].
+. [[r4]] link:https://cwe.mitre.org/data/definitions/646.html[CWE-646: Reliance on File Name or Extension of Externally-Supplied File].
 The software allows a file to be uploaded,
 but it relies on the file name or extension of the file to determine the
 appropriate behaviors.
 This could be used by attackers to cause the file to be misclassified and
 processed in a dangerous fashion.
 
-. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V12.2 File Integrity Requirements.(12.2.1)]
 Verify that files obtained from untrusted sources are validated to be of
 expected type based on the file's content.
