--- a/airs/content/pages/products/rules/list/services/330/index.adoc
+++ b/airs/content/pages/products/rules/list/services/330/index.adoc
@@ -1,7 +1,7 @@
 :slug: products/rules/list/330/
 :category: services
 :description: This requirement establishes the importance of using Subresource Integrity to validate the integrity of externally hosted resources.
-:keywords: Subresource, Integrity, External, Hosting, ASVS, CWE, CAPEC, Rules, Ethical Hacking, Pentesting
+:keywords: Subresource, Integrity, External, Hosting, ASVS, CAPEC, CWE, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R330. Verify Subresource Integrity
@@ -38,23 +38,27 @@ used,
 often one that the adversary controls and can be used to help them achieve
 their malicious goals.
 
-. [[r3]] link:https://cwe.mitre.org/data/definitions/353.html[CWE-353: Missing Support for Integrity Check]
+. [[r3]] link:http://capec.mitre.org/data/definitions/165.html[CAPEC-165: File Manipulation].
+An attacker modifies file contents or attributes (such as extensions or names)
+of files in a manner to cause incorrect processing by an application.
+
+. [[r4]] link:https://cwe.mitre.org/data/definitions/353.html[CWE-353: Missing Support for Integrity Check]
 The software uses a transmission protocol that does not include a mechanism for
 verifying the integrity of the data during transmission, such as a checksum.
 
-. [[r4]] link:https://cwe.mitre.org/data/definitions/494.html[CWE-494: Download of Code Without Integrity Check]
+. [[r5]] link:https://cwe.mitre.org/data/definitions/494.html[CWE-494: Download of Code Without Integrity Check]
 The product downloads source code or an executable from a remote location and
 executes the code without sufficiently verifying the origin and integrity of
 the code.
 
-. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V10.3 Deployed Application Integrity Controls.(10.3.1)]
 Verify that if the application has a client or server auto-update feature,
 updates should be obtained over secure channels and digitally signed.
 The update code must validate the digital signature of the update before
 installing or executing the update.
 
-. [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r7]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V10.3 Deployed Application Integrity Controls.(10.3.2)]
 Verify that the application employs integrity protections,
 such as code signing or **sub-resource integrity**.
@@ -62,7 +66,7 @@ The application must not load or execute code from untrusted sources,
 such as loading includes, modules, plugins, code, or libraries from untrusted
 sources or the Internet.
 
-. [[r7]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r8]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V14.2 Dependency.(14.2.3)]
 Verify that if application assets, such as *JavaScript* libraries, *CSS*
 stylesheets or web fonts, are hosted externally on a content delivery
