--- a/airs/content/pages/products/rules/list/files/037/index.adoc
+++ b/airs/content/pages/products/rules/list/files/037/index.adoc
@@ -81,7 +81,11 @@ adversely impact the security of the target.
 An attacker modifies file contents or attributes (such as extensions or names)
 of files in a manner to cause incorrect processing by an application.
 
-. [[r4]] link:https://cwe.mitre.org/data/definitions/22.html[CWE-22: Improper Limitation of a Pathname to a Restricted Directory
+. [[r4]] link:http://capec.mitre.org/data/definitions/175.html[CAPEC-175: Code Inclusion].
+An adversary exploits a weakness on the target to force arbitrary code to be
+retrieved locally or from a remote location and executed.
+
+. [[r5]] link:https://cwe.mitre.org/data/definitions/22.html[CWE-22: Improper Limitation of a Pathname to a Restricted Directory
 ('Path traversal')].
 The software uses external input to construct a pathname that is intended to
 identify a file or directory that is located underneath a restricted parent
@@ -90,41 +94,41 @@ but the software does not properly neutralize special elements within the
 pathname that can cause the pathname to resolve to a location that is outside
 of the restricted directory.
 
-. [[r5]] link:https://cwe.mitre.org/data/definitions/23.html[CWE-23: Relative Path Traversal].
+. [[r6]] link:https://cwe.mitre.org/data/definitions/23.html[CWE-23: Relative Path Traversal].
 The software uses external input to construct a pathname that should be within
 a restricted directory,
 but it does not properly neutralize sequences such as ""**..**" that can resolve
 to a location that is outside of that directory.
 
-. [[r6]] link:https://cwe.mitre.org/data/definitions/36.html[CWE-36: Absolute Path Traversal].
+. [[r7]] link:https://cwe.mitre.org/data/definitions/36.html[CWE-36: Absolute Path Traversal].
 The software uses external input to construct a pathname that should be within
 a restricted directory,
 but it does not properly neutralize absolute path sequences such as
 **"/abs/path"** that can resolve to a location that is outside of that
 directory.
 
-. [[r7]] link:https://cwe.mitre.org/data/definitions/73.html[CWE-73: External Control of File Name or Path].
+. [[r8]] link:https://cwe.mitre.org/data/definitions/73.html[CWE-73: External Control of File Name or Path].
 The software allows user input to control or influence paths or file names that
 are used in filesystem operations.
 
-. [[r8]] link:https://cwe.mitre.org/data/definitions/98.html[CWE-98: PHP Remote File Inclusion].
+. [[r9]] link:https://cwe.mitre.org/data/definitions/98.html[CWE-98: PHP Remote File Inclusion].
 The PHP application receives input from an upstream component,
 but it does not restrict or incorrectly restricts the input before its usage in
 "**require**," "**include**," or similar functions.
 
-. [[r9]] link:https://cwe.mitre.org/data/definitions/641.html[CWE-641: Improper Restriction of Names for Files and Other Resources].
+. [[r10]] link:https://cwe.mitre.org/data/definitions/641.html[CWE-641: Improper Restriction of Names for Files and Other Resources].
 The application constructs the name of a file or other resource using input
 from an upstream component,
 but it does not restrict or incorrectly restricts the resulting name.
 
-. [[r10]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A1-Injection[OWASP Top 10 A1:2017-Injection].
+. [[r11]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A1-Injection[OWASP Top 10 A1:2017-Injection].
 Injection flaws, such as **SQL**, **NoSQL**, **OS**, and *LDAP* injection,
 occur when untrusted data is sent to an interpreter as part of a command or
 query.
 The attacker's hostile data can trick the interpreter into executing unintended
 commands or accessing data without proper authorization.
 
-. [[r11]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A3-Sensitive_Data_Exposure[OWASP Top 10 A3:2017-Sensitive Data Exposure].
+. [[r12]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A3-Sensitive_Data_Exposure[OWASP Top 10 A3:2017-Sensitive Data Exposure].
 Many web applications and **API**s do not properly protect sensitive data,
 such as financial, healthcare, and *PII*.
 Attackers may steal or modify such weakly protected data to conduct credit card
@@ -133,33 +137,33 @@ Sensitive data may be compromised without extra protection,
 such as encryption at rest or in transit, and requires special precautions when
 exchanged with the browser.
 
-. [[r12]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r13]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V5.3 Output encoding and Injection Prevention Requirements.(5.3.9)]
 Verify that the application protects against Local File Inclusion (*LFI*) or
 Remote File Inclusion (*RFI*) attacks.
 
-. [[r13]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r14]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V5.3 Output encoding and Injection Prevention Requirements.(5.3.10)]
 Verify that the application protects against *XPath* injection or *XML*
 injection attacks.
 
-. [[r14]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r15]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V12.3 File execution Requirements.(12.3.1)]
 Verify that user-submitted filename metadata is not used directly with system
 or framework file and *URL* *API* to protect against path traversal.
 
-. [[r15]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r16]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V12.3 File execution Requirements.(12.3.2)]
 Verify that user-submitted filename metadata is validated or ignored to prevent
 the disclosure, creation, updating or removal of local files (*LFI*).
 
-. [[r16]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r17]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V12.3 File execution Requirements.(12.3.3)]
 Verify that user-submitted filename metadata is validated or ignored to prevent
 the disclosure or execution of remote files (*RFI*),
 which may also lead to *SSRF*.
 
-. [[r17]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r18]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V12.3 File execution Requirements.(12.3.4)]
 Verify that the application protects against reflective file download (*RFD*)
 by validating or ignoring user-submitted filenames in a *JSON*, *JSONP*,
@@ -167,12 +171,12 @@ or *URL* parameter,
 the response **Content-Type** header should be set to **text/plain**,
 and the **Content-Disposition** header should have a fixed filename.
 
-. [[r18]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r19]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V12.3 File execution Requirements.(12.3.5)]
 Verify that untrusted file metadata is not used directly with system *API* or
 libraries, to protect against *OS* command injection.
 
-. [[r19]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.1]
+. [[r20]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.1]
 Address common coding vulnerabilities in software-development processes such as
 injection flaws, particularly *SQL* injection.
 Also consider *OS* Command Injection, *LDAP* and *XPath* injection flaws as
