--- a/skims/static/translations/findings/F022.yaml
+++ b/skims/static/translations/findings/F022.yaml
@@ -1,3 +1,6 @@
+src.lib_path.f022.unencrypted_channel:
+  en: Use of unencrypted protocol in {path}
+  es: Uso de canal no cifrado en {path}
 utils.model.finding.enum.F022.description:
   en: >
     The system transmits information through a channel without encryption.
