--- a/airs/content/pages/products/rules/list/files/046/index.adoc
+++ b/airs/content/pages/products/rules/list/files/046/index.adoc
@@ -51,27 +51,31 @@ used,
 often one that the adversary controls and can be used to help them achieve
 their malicious goals.
 
-. [[r6]] link:https://cwe.mitre.org/data/definitions/778.html[CWE-778: Insufficient Logging].
+. [[r6]] link:http://capec.mitre.org/data/definitions/176.html[CAPEC-176: Configuration/Environment Manipulation].
+An attacker manipulates files or settings external to a target application
+which affect the behavior of that application.
+
+. [[r7]] link:https://cwe.mitre.org/data/definitions/778.html[CWE-778: Insufficient Logging].
 When a security-critical event occurs,
 the software either does not record the event or omits important details about
 the event when logging it.
 
-. [[r7]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r8]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V14.1 Build.(14.1.5)]
 Verify that authorized administrators can verify the integrity of all
 security-relevant configurations to detect tampering.
 
-. [[r8]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 10.2.2]
+. [[r9]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 10.2.2]
 Implement automated audit trails for all system components to reconstruct all
 actions taken by any individual with root or administrative privileges.
 
-. [[r9]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 10.2.6]
+. [[r10]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 10.2.6]
 Implement automated audit trails for all system components to reconstruct
 creation and deletion of system-level objects.
 
-. [[r10]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 10.4.2]
+. [[r11]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 10.4.2]
 Time data is protected.
 
-. [[r11]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 10.5.5]
+. [[r12]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 10.5.5]
 Use file-integrity monitoring or change-detection software on logs to ensure
 that existing log data cannot be changed without generating alerts.
